--- a/package.json
+++ b/package.json
@@ -12,8 +12,13 @@
     "check:format": "prettier --check ."
   },
   "dependencies": {
+    "@astrojs/node": "^5.1.3",
+    "@astrojs/svelte": "^2.1.1",
     "@fontsource/work-sans": "^4.5.14",
-    "astro": "^2.3.2"
+    "@supabase/supabase-js": "^2.21.0",
+    "astro": "^2.4.5",
+    "dotenv": "^16.0.3",
+    "svelte": "^3.59.1"
   },
   "devDependencies": {
     "prettier": "^2.8.8",
