--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@astrojs/node": "^5.1.3",
     "@astrojs/svelte": "^2.1.1",
+    "@supabase/auth-helpers-shared": "^0.2.3",
     "@fontsource/work-sans": "^4.5.14",
     "@supabase/supabase-js": "^2.21.0",
     "astro": "^2.4.5",
@@ -22,6 +23,7 @@
   },
   "devDependencies": {
     "prettier": "^2.8.8",
-    "prettier-plugin-astro": "^0.8.0"
+    "prettier-plugin-astro": "^0.8.0",
+    "prettier-plugin-svelte": "^2.10.0"
   }
 }
