--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "proud-planet",
+  "name": "fiolalia-project",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -14,8 +14,9 @@
   "dependencies": {
     "@astrojs/node": "^5.1.3",
     "@astrojs/svelte": "^2.1.1",
-    "@supabase/auth-helpers-shared": "^0.2.3",
+    "@fontsource/paytone-one": "^5.0.12",
     "@fontsource/work-sans": "^4.5.14",
+    "@supabase/auth-helpers-shared": "^0.2.3",
     "@supabase/supabase-js": "^2.21.0",
     "astro": "^2.4.5",
     "dotenv": "^16.0.3",
